Project containers added

--- a/frontpage.html
+++ b/frontpage.html
@@ -108,7 +108,7 @@
 
      <div class="section2" id="work">
         <div class="title">
-            Work experience
+            <u>Work experience</u>
         </div>
 
         <div class="work-containers">
@@ -144,8 +144,25 @@
 
      <div class="section3" id="projects">
         <div class="title">
-            Projects
+            <u>Projects</u>
         </div>
+
+        <div class="project-container">
+            <img class="project-image" src="photos/personalprojectsite.JPG">
+            <p class="project-title">
+                <a class="project-link" href="https://github.com/tchan2003/personal-website" target="_blank">
+                    Personal Website
+                </a>
+            </p>
+
+            <p class="project-description">
+                Portfolio website to display information about my job experiences and personal projects.
+            </p>
+
+            
+        </div>
+
+       
      </div>
 
      <div class="section4" id="contact">
