--- a/frontpage.html
+++ b/frontpage.html
@@ -182,7 +182,7 @@
                 <i class="fa-brands fa-github fa-3x"></i>
             </a>
 
-            <a class="links" href="www.linkedin.com/in/tchan2003" target="_blank">
+            <a class="links" href="https://linkedin.com/in/tchan2003" target="_blank">
                 <i class="fa-brands fa-linkedin fa-3x"></i>
             </a>
         </div>
